--- a/nginx.conf
+++ b/nginx.conf
@@ -6,5 +6,11 @@ http {
         location / {
             proxy_pass http://booking_back:8000/;
         }
+
+        ssl_certificate /etc/letsencrypt/live/nabroniroval.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/nabroniroval.ru/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
     }
 }
