--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,8 @@ events {}
 http {
     limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
     server {
+        listen 443 ssl;
+
         location / {
             proxy_pass http://booking_back:8000/;
         }
